ghc-6.2/hslibs/win32/Win32Registry_stub_ffi.h

extern void* prim_regCreateKeyEx(HKEY arg1,char * arg2,char * arg3,int arg4,int arg5,void * arg6);
extern void* access_prim_regCreateKeyEx_gc_res3(HsPtr);
extern HKEY access_prim_regCreateKeyEx_gc_res1(HsPtr);
extern int access_prim_regCreateKeyEx_gc_res5(HsPtr);
extern int access_prim_regCreateKeyEx_gc_failed(HsPtr);
extern void* access_prim_regCreateKeyEx_gc_failstring(HsPtr);
extern void* prim_regDeleteKey(HKEY arg1,char * arg2);
extern int access_prim_regDeleteKey_gc_failed(HsPtr);
extern void* access_prim_regDeleteKey_gc_failstring(HsPtr);
extern void* prim_regDeleteValue(HKEY arg1,char * arg2);
extern int access_prim_regDeleteValue_gc_failed(HsPtr);
extern void* access_prim_regDeleteValue_gc_failstring(HsPtr);
extern DWORD prim_readWord32Addr(char* s,int i);
extern void* prim_regEnumKey(HKEY arg1,DWORD arg2,void * arg3,DWORD arg4);
extern char * access_prim_regEnumKey_gc_res2(HsPtr);
extern int access_prim_regEnumKey_gc_res3(HsPtr);
extern int access_prim_regEnumKey_gc_failed(HsPtr);
extern void* access_prim_regEnumKey_gc_failstring(HsPtr);
extern void* prim_regEnumValue(HKEY arg1,DWORD arg2,void * arg3,DWORD arg4,void * arg5,DWORD arg6);
extern int access_prim_regEnumValue_gc_res1(HsPtr);
extern char * access_prim_regEnumValue_gc_res3(HsPtr);
extern int access_prim_regEnumValue_gc_res4(HsPtr);
extern int access_prim_regEnumValue_gc_failed(HsPtr);
extern void* access_prim_regEnumValue_gc_failstring(HsPtr);
extern void* prim_regFlushKey(HKEY arg1);
extern int access_prim_regFlushKey_gc_failed(HsPtr);
extern void* access_prim_regFlushKey_gc_failstring(HsPtr);
extern void* prim_regLoadKey(HKEY arg1,char * arg2,char * arg3);
extern int access_prim_regLoadKey_gc_failed(HsPtr);
extern void* access_prim_regLoadKey_gc_failstring(HsPtr);
extern int prim_rEG_NOTIFY_CHANGE_NAME();
extern int prim_rEG_NOTIFY_CHANGE_ATTRIBUTES();
extern int prim_rEG_NOTIFY_CHANGE_LAST_SET();
extern int prim_rEG_NOTIFY_CHANGE_SECURITY();
extern void* prim_regNotifyChangeKeyValue(HKEY arg1,int arg2,int arg3,HANDLE arg4,int arg5);
extern int access_prim_regNotifyChangeKeyValue_gc_failed(HsPtr);
extern void* access_prim_regNotifyChangeKeyValue_gc_failstring(HsPtr);