ghc-6.2/hslibs/win32/Win32Registry.hs


regCreateKeyEx :: HKEY -> String -> String -> RegCreateOptions -> REGSAM -> MbLPSECURITY_ATTRIBUTES -> IO (HKEY,Bool)
regCreateKeyEx arg1 gc_arg1 gc_arg2 arg4 arg5 arg6 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  (marshall_string_ gc_arg2) >>= \ (arg3) ->
  (case arg6 of {
      Nothing -> (return (nullAddr));
      (Just arg6) -> (return ((arg6)))
   }) >>= \ (arg6) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regCreateKeyEx arg1 arg2 arg3 arg4 arg5 arg6
  >>= \ gc_result ->
  access_prim_regCreateKeyEx_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regCreateKeyEx_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_regCreateKeyEx_gc_res5 (gc_result :: Addr) >>= \ gc_res5 ->
  access_prim_regCreateKeyEx_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regCreateKeyEx_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (makeForeignPtr gc_res1 gc_res3) >>= \ gc_res2 ->
       (unmarshall_bool_ gc_res5) >>= \ gc_res4 ->
       (return ((gc_res2,gc_res4)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regCreateKeyEx" prim_regCreateKeyEx :: Ptr () -> Addr -> Addr -> Int32 -> Int32 -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKeyEx_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKeyEx_gc_res1 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKeyEx_gc_res5 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKeyEx_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regCreateKeyEx_gc_failstring :: Addr -> IO (Addr)

regDeleteKey :: HKEY -> String -> IO ()
regDeleteKey arg1 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regDeleteKey arg1 arg2
  >>= \ gc_result ->
  access_prim_regDeleteKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regDeleteKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regDeleteKey" prim_regDeleteKey :: Ptr () -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regDeleteKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regDeleteKey_gc_failstring :: Addr -> IO (Addr)

regDeleteValue :: HKEY -> String -> IO ()
regDeleteValue arg1 gc_arg1 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regDeleteValue arg1 arg2
  >>= \ gc_result ->
  access_prim_regDeleteValue_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regDeleteValue_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regDeleteValue" prim_regDeleteValue :: Ptr () -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regDeleteValue_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regDeleteValue_gc_failstring :: Addr -> IO (Addr)

regEnumKeys :: HKEY -> IO [String]
regEnumKeys hkey = do
   hinfo <- regQueryInfoKey hkey
   let buflen = 1+max_subkey_len hinfo
   buf   <- malloc buflen
   ls    <- go 0 buf buflen
   free buf
   return ls
 where
   go n buf buflen = do
      (v,flg)  <- regEnumKey hkey n buf buflen
      if flg /= 0
       then return []
       else do
         vs <- go (n+1) buf buflen
         return (v:vs)

regEnumKeyVals :: HKEY -> IO [(String,String,RegValueType)]
regEnumKeyVals hkey = do
   hinfo <- regQueryInfoKey hkey
   let nmlen  = 1+max_value_name_len hinfo  -- add spc for terminating NUL.
   let vallen = 1+max_value_len hinfo
   nmbuf  <- malloc nmlen
   valbuf <- malloc vallen
   ls     <- go 0 nmbuf nmlen valbuf vallen
   free nmbuf
   free valbuf
   return ls
 where
   go n nmbuf nmlen valbuf vallen = do
      (ty,nm,flg) <- regEnumValue hkey n nmbuf nmlen valbuf vallen
      if flg /= 0
       then return []
       else do

        val <- 
	   case ty of
	     x | x == rEG_SZ    -> unmarshall_string_ valbuf
	       | x == rEG_DWORD -> readWord32Addr valbuf 0 >>= \ v -> return (show v)
	       | otherwise      -> return "<<unknown>>"

        vs <- go (n+1) nmbuf nmlen valbuf vallen
        return ((nm,val,ty):vs)

readWord32Addr :: Addr -> Int -> IO DWORD
readWord32Addr s i =
  prim_readWord32Addr s i
  >>= \  res1  ->
  (return (res1))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_readWord32Addr" prim_readWord32Addr :: Addr -> Int -> IO (Word32)

-- It's up to the programmer to ensure that a large enough
-- buffer is passed in here.

regEnumKey :: HKEY -> DWORD -> Addr -> DWORD -> IO (String,Int)
regEnumKey arg1 arg2 arg3 arg4 =
  withForeignPtr arg1 $ \ arg1 ->
  prim_regEnumKey arg1 arg2 arg3 arg4
  >>= \ gc_result ->
  access_prim_regEnumKey_gc_res2 (gc_result :: Addr) >>= \ gc_res2 ->
  access_prim_regEnumKey_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regEnumKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regEnumKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ gc_res2) >>= \ gc_res1 ->
       (return ((gc_res1,gc_res3)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regEnumKey" prim_regEnumKey :: Ptr () -> Word32 -> Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumKey_gc_res2 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumKey_gc_res3 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumKey_gc_failstring :: Addr -> IO (Addr)

regEnumValue :: HKEY -> DWORD -> Addr -> DWORD -> Addr -> DWORD -> IO (RegValueType,String,Int)
regEnumValue arg1 arg2 arg3 arg4 arg5 arg6 =
  withForeignPtr arg1 $ \ arg1 ->
  prim_regEnumValue arg1 arg2 arg3 arg4 arg5 arg6
  >>= \ gc_result ->
  access_prim_regEnumValue_gc_res1 (gc_result :: Addr) >>= \ gc_res1 ->
  access_prim_regEnumValue_gc_res3 (gc_result :: Addr) >>= \ gc_res3 ->
  access_prim_regEnumValue_gc_res4 (gc_result :: Addr) >>= \ gc_res4 ->
  access_prim_regEnumValue_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regEnumValue_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (unmarshall_string_ gc_res3) >>= \ gc_res2 ->
       (return ((gc_res1,gc_res2,gc_res4)))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regEnumValue" prim_regEnumValue :: Ptr () -> Word32 -> Addr -> Word32 -> Addr -> Word32 -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumValue_gc_res1 :: Addr -> IO (Int32)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumValue_gc_res3 :: Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumValue_gc_res4 :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumValue_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regEnumValue_gc_failstring :: Addr -> IO (Addr)

regFlushKey :: HKEY -> IO ()
regFlushKey arg1 =
  withForeignPtr arg1 $ \ arg1 ->
  prim_regFlushKey arg1
  >>= \ gc_result ->
  access_prim_regFlushKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regFlushKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regFlushKey" prim_regFlushKey :: Ptr () -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regFlushKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regFlushKey_gc_failstring :: Addr -> IO (Addr)

-- #ifdef FOR_WINDOWS_NT
-- %fun RegGetKeySecurity :: HKEY -> SECURITY_INFORMATION -> IO SECURITY_DESCRIPTION

-- #endif


regLoadKey :: HKEY -> String -> String -> IO ()
regLoadKey arg1 gc_arg1 gc_arg2 =
  (marshall_string_ gc_arg1) >>= \ (arg2) ->
  (marshall_string_ gc_arg2) >>= \ (arg3) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regLoadKey arg1 arg2 arg3
  >>= \ gc_result ->
  access_prim_regLoadKey_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regLoadKey_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regLoadKey" prim_regLoadKey :: Ptr () -> Addr -> Addr -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regLoadKey_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regLoadKey_gc_failstring :: Addr -> IO (Addr)

-- #ifdef FOR_WINDOWS_NT

type RegNotifyOptions = Int32

foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_NOTIFY_CHANGE_NAME" rEG_NOTIFY_CHANGE_NAME :: RegNotifyOptions
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_NOTIFY_CHANGE_ATTRIBUTES" rEG_NOTIFY_CHANGE_ATTRIBUTES :: RegNotifyOptions
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_NOTIFY_CHANGE_LAST_SET" rEG_NOTIFY_CHANGE_LAST_SET :: RegNotifyOptions
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_rEG_NOTIFY_CHANGE_SECURITY" rEG_NOTIFY_CHANGE_SECURITY :: RegNotifyOptions



regNotifyChangeKeyValue :: HKEY -> Bool -> RegNotifyOptions -> HANDLE -> Bool -> IO ()
regNotifyChangeKeyValue arg1 gc_arg1 arg3 arg4 gc_arg2 =
  (marshall_bool_ gc_arg1) >>= \ (arg2) ->
  (marshall_bool_ gc_arg2) >>= \ (arg5) ->
  withForeignPtr arg1 $ \ arg1 ->
  prim_regNotifyChangeKeyValue arg1 arg2 arg3 arg4 arg5
  >>= \ gc_result ->
  access_prim_regNotifyChangeKeyValue_gc_failed (gc_result :: Addr) >>= \ gc_failed ->
  access_prim_regNotifyChangeKeyValue_gc_failstring (gc_result :: Addr) >>= \ gc_failstring ->
  if ( gc_failed /= (0::Int))
  then unmarshall_string_ gc_failstring >>=  ioError  . userError
  else (return (()))
foreign import  ccall unsafe "Win32Registry_stub_ffi.h prim_regNotifyChangeKeyValue" prim_regNotifyChangeKeyValue :: Ptr () -> Int -> Int32 -> Addr -> Int -> IO (Addr)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regNotifyChangeKeyValue_gc_failed :: Addr -> IO (Int)
foreign import ccall unsafe "Win32Registry_stub_ffi.h" access_prim_regNotifyChangeKeyValue_gc_failstring :: Addr -> IO (Addr)

-- #endif
